solved issues with navbar on all pages, covered by arrow and not showing current page correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,10 @@ solution from stackoverflow*/
     text-align: justify;
 }
 
+.go-on-top {
+    z-index: 4;
+}
+
 
 /*-----------------------------big image all page--------------------------------------
 
